--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 
 node_js:
-  - "5.0"
+  - "0.10"
 
 before_install:
   # Decrypt the private key
@@ -19,10 +19,10 @@ before_install:
   - git config --global user.email pannpei@gmail.com
   # Install Hexo
   - npm install hexo-cli -g
-  - npm install
+  - npm install hexo-generator-feed
+  - npm install hexo-generator-sitemap
 
 script:
-  - hexo clean
   - hexo generate
   - hexo deploy
 
