--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ per_page: 10
 pagination_dir: page
 
 # Disqus
-disqus_shortname: crazyli0nsblog
+# disqus_shortname: crazyli0nsblog
 
 # Extensions
 ## Plugins: http://hexo.io/plugins/
