--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,10 @@ before_install:
   - npm install hexo-generator-feed
   - npm install hexo-generator-sitemap
 
+install:
+  - npm install
+  - npm install hexo-deployer-git --save
+
 script:
   - hexo generate
   - hexo deploy
